Mon Jul 11 14:41:52 BST 2005  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Define ATTRIBUTE_SENTINEL to a function
	  attribute enabling sentinel checking if using GCC 4.0 or newer.
	  (strappend): Use it.
	* lib/pipeline.h (command_new_args, command_args,
	  pipeline_new_commands, pipeline_command_args, pipeline_commands):
	  Likewise.

Mon Jul 11 14:38:30 BST 2005  Colin Watson  <cjwatson@debian.org>

	* lib/Makefile.in, libdb/Makefile.in, src/Makefile.in,
	  zsoelim/Makefile.in: Stop using -I-; it's deprecated in GCC 4.0,
	  and it doesn't seem worth the effort of switching to the -iquote
	  replacement.

Mon Jul 11 12:02:57 BST 2005  Colin Watson  <cjwatson@debian.org>

	* src/man.c (usage): Fix "gditview" typo (Debian bug #317696).
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po: Unfuzzy all translations.

Fri Jul  8 13:12:29 BST 2005  Ralph Corderoy  <ralph@inputplus.co.uk>

	* src/man.c (display): Drop "Reformatting %s, please wait..."
	  message; it's been years since processing power was low enough for
	  this to be relevant.

Mon Jul  4 00:49:36 BST 2005  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (EVERYTHING, ALL): List intl before lib, since
	  intl/Makefile runs config.status and thus recreates lib/Makefile
	  after lib has been distcleaned.

Sun Jul  3 22:14:02 BST 2005  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.3.
	* configure.in, docs/NEWS, man-db.lsm: Update.
	* man-db.lsm: Correct primary download location.

Sun Jul  3 20:55:13 BST 2005  Colin Watson  <cjwatson@debian.org>

	* configure.in: Define HAVE_GZIP, HAVE_COMPRESS, and HAVE_BZIP2 as
	  appropriate.
	* include/comp_src.h.in: Conditionalise compressor list on
	  HAVE_GZIP, HAVE_COMPRESS, and HAVE_BZIP2 rather than on GUNZIP,
	  UNCOMPRESS, and BUNZIP2; if a compressor isn't detected, the