@@ -1,3 +1,7 @@
+Mon Jul 11 18:12:58 BST 2005  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_wait): Emit a debugging message.
+
 Mon Jul 11 14:41:52 BST 2005  Colin Watson  <cjwatson@debian.org>
 
 	* include/manconfig.h.in: Define ATTRIBUTE_SENTINEL to a function
